fixed org. list overlapping in mobile

--- a/src/pages/home/components/orglist/orglist.css
+++ b/src/pages/home/components/orglist/orglist.css
@@ -4,7 +4,7 @@
 
 @media (min-width: 0px) and (max-height: 740px) {
   .OrgList {
-    margin-top: 1%;
+    margin-top: -10%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -168,7 +168,7 @@
 }
 @media (min-width: 0px) and (min-height: 740.01px) {
   .OrgList {
-    margin-top: 1%;
+    margin-top: -15%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -697,7 +697,7 @@
 }
 @media (min-width: 768px) and (max-height: 1024px) {
   .OrgList {
-    margin-top: 1%;
+    margin-top: -15%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -880,7 +880,7 @@
 }
 @media (min-width: 768px) and (min-height: 1024.01px) {
   .OrgList {
-    margin-top: 1%;
+    margin-top: -12%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -1064,7 +1064,7 @@
 }
 @media (min-width: 992px) {
   .OrgList {
-    margin-top: 1%;
+    margin-top: -45%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -1249,7 +1249,7 @@
 }
 @media (min-width: 1200px) {
   .OrgList {
-    margin-top: 4%;
+    margin-top: -50%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -1433,7 +1433,7 @@
 }
 @media (min-width: 1400px) {
   .OrgList {
-    margin-top: 3%;
+    margin-top: -50%;
     width: 100%;
     display: flex;
     flex-direction: row;
