--- a/src/pages/home/components/top/top.css
+++ b/src/pages/home/components/top/top.css
@@ -1598,7 +1598,7 @@
     background-image: url("../../assets/header-bg-1200.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    height: 120%;
+    height: 150%;
     width: 100%;
     background-size: cover;
     margin-top: 5px;
